--- a/styl1.css
+++ b/styl1.css
@@ -9,6 +9,7 @@ body {
     text-align: left;
     background-color: rgb(0, 0, 0);
     padding : 15px;
+    margin: 0px;
 }
 .second_header {
     text-align: center;
